loopstudios landing page - active states

--- a/loopstudios-landing-page/index.html
+++ b/loopstudios-landing-page/index.html
@@ -56,11 +56,11 @@
                 />
               </button>
               <ul class="header__links">
-                <li><a href="#" class="header__link">About</a></li>
-                <li><a href="#" class="header__link">Careers</a></li>
-                <li><a href="#" class="header__link">Events</a></li>
-                <li><a href="#" class="header__link">Products</a></li>
-                <li><a href="#" class="header__link">Support</a></li>
+                <li><a href="#" class="header__link hover-bar">About</a></li>
+                <li><a href="#" class="header__link hover-bar">Careers</a></li>
+                <li><a href="#" class="header__link hover-bar">Events</a></li>
+                <li><a href="#" class="header__link hover-bar">Products</a></li>
+                <li><a href="#" class="header__link hover-bar">Support</a></li>
               </ul>
             </nav>
           </div>
@@ -95,28 +95,44 @@
         <h2 class="creations__title">Our creations</h2>
         <ul class="creations__cards">
           <li class="creations__card">
-            <h3 class="creations__subtitle">Deep<br />earth</h3>
+            <a href="#" class="creations__link">
+              <h3 class="creations__subtitle">Deep<br />earth</h3>
+            </a>
           </li>
           <li class="creations__card">
-            <h3 class="creations__subtitle">Night<br />arcade</h3>
+            <a href="#" class="creations__link">
+              <h3 class="creations__subtitle">Night<br />arcade</h3>
+            </a>
           </li>
           <li class="creations__card">
-            <h3 class="creations__subtitle">Soccer<br />team VR</h3>
+            <a href="#" class="creations__link">
+              <h3 class="creations__subtitle">Soccer<br />team VR</h3>
+            </a>
           </li>
           <li class="creations__card">
-            <h3 class="creations__subtitle">The<br />grid</h3>
+            <a href="#" class="creations__link">
+              <h3 class="creations__subtitle">The<br />grid</h3>
+            </a>
           </li>
           <li class="creations__card">
-            <h3 class="creations__subtitle">From up<br />above VR</h3>
+            <a href="#" class="creations__link">
+              <h3 class="creations__subtitle">From up<br />above VR</h3>
+            </a>
           </li>
           <li class="creations__card">
-            <h3 class="creations__subtitle">Pocket<br />borealis</h3>
+            <a href="#" class="creations__link">
+              <h3 class="creations__subtitle">Pocket<br />borealis</h3>
+            </a>
           </li>
           <li class="creations__card">
-            <h3 class="creations__subtitle">The<br />curiosity</h3>
+            <a href="#" class="creations__link">
+              <h3 class="creations__subtitle">The<br />curiosity</h3>
+            </a>
           </li>
           <li class="creations__card">
-            <h3 class="creations__subtitle">Make it<br />fisheye</h3>
+            <a href="#" class="creations__link">
+              <h3 class="creations__subtitle">Make it<br />fisheye</h3>
+            </a>
           </li>
         </ul>
         <button class="creations__btn btn">see all</button>
@@ -125,33 +141,33 @@
         <div class="footer__wrapper layout__content">
           <img class="footer__logo" src="images/logo.svg" alt="loopstudios" />
           <ul class="footer__links">
-            <li><a href="#" class="footer__link">About</a></li>
-            <li><a href="#" class="footer__link">Careers</a></li>
-            <li><a href="#" class="footer__link">Events</a></li>
-            <li><a href="#" class="footer__link">Products</a></li>
-            <li><a href="#" class="footer__link">Support</a></li>
+            <li><a href="#" class="footer__link hover-bar">About</a></li>
+            <li><a href="#" class="footer__link hover-bar">Careers</a></li>
+            <li><a href="#" class="footer__link hover-bar">Events</a></li>
+            <li><a href="#" class="footer__link hover-bar">Products</a></li>
+            <li><a href="#" class="footer__link hover-bar">Support</a></li>
           </ul>
           <ul class="footer__socials">
-            <img
-              src="images/icon-facebook.svg"
-              alt="facebook"
-              class="footer__social"
-            />
-            <img
-              src="images/icon-twitter.svg"
-              alt="twitter"
-              class="footer__social"
-            />
-            <img
-              src="images/icon-pinterest.svg"
-              alt="pinterest"
-              class="footer__social"
-            />
-            <img
-              src="images/icon-instagram.svg"
-              alt="instagram"
-              class="footer__social"
-            />
+            <li>
+              <a href="#" class="footer__social hover-bar"
+                ><img src="images/icon-facebook.svg" alt="facebook"
+              /></a>
+            </li>
+            <li>
+              <a href="#" class="footer__social hover-bar"
+                ><img src="images/icon-twitter.svg" alt="twitter"
+              /></a>
+            </li>
+            <li>
+              <a href="#" class="footer__social hover-bar"
+                ><img src="images/icon-pinterest.svg" alt="pinterest"
+              /></a>
+            </li>
+            <li>
+              <a href="#" class="footer__social hover-bar"
+                ><img src="images/icon-instagram.svg" alt="instagram"
+              /></a>
+            </li>
           </ul>
           <p class="footer__copyright">
             © 2021 Loopstudios. All rights reserved.
