--- a/loopstudios-landing-page/index.html
+++ b/loopstudios-landing-page/index.html
@@ -14,8 +14,8 @@
     <title>Frontend Mentor | Loopstudios landing page</title>
   </head>
   <body>
-    <main id="container-main" class="layout">
-      <section class="splash layout__full-width layout">
+    <main id="container-main">
+      <section class="splash layout">
         <header class="header layout__content" id="container-header">
           <img
             class="header__logo"
@@ -69,75 +69,79 @@
           Immersive experiences that deliver
         </h1>
       </section>
-      <section class="intro layout__content">
-        <picture class="intro__pic">
-          <source
-            srcset="images/desktop/image-interactive.jpg"
-            media="(width >= 1440px)"
-          />
-          <img
-            src="images/mobile/image-interactive.jpg"
-            alt="a man using a VR
-          headset"
-          />
-        </picture>
-        <div class="intro__content">
-          <h2 class="intro__title">The leader in interactive VR</h2>
-          <p>
-            Founded in 2011, Loopstudios has been producing world-class virtual
-            reality projects for some of the best companies around the globe.
-            Our award-winning creations have transformed businesses through
-            digital experiences that bind to their brand.
-          </p>
+      <section class="intro layout">
+        <div class="intro__wrapper layout__content">
+          <picture class="intro__pic">
+            <source
+              srcset="images/desktop/image-interactive.jpg"
+              media="(width >= 1440px)"
+            />
+            <img
+              src="images/mobile/image-interactive.jpg"
+              alt="a man using a VR
+            headset"
+            />
+          </picture>
+          <div class="intro__content">
+            <h2 class="intro__title">The leader in interactive VR</h2>
+            <p>
+              Founded in 2011, Loopstudios has been producing world-class
+              virtual reality projects for some of the best companies around the
+              globe. Our award-winning creations have transformed businesses
+              through digital experiences that bind to their brand.
+            </p>
+          </div>
         </div>
       </section>
-      <section class="creations layout__content">
-        <h2 class="creations__title">Our creations</h2>
-        <ul class="creations__cards">
-          <li class="creations__card">
-            <a href="#" class="creations__link">
-              <h3 class="creations__subtitle">Deep<br />earth</h3>
-            </a>
-          </li>
-          <li class="creations__card">
-            <a href="#" class="creations__link">
-              <h3 class="creations__subtitle">Night<br />arcade</h3>
-            </a>
-          </li>
-          <li class="creations__card">
-            <a href="#" class="creations__link">
-              <h3 class="creations__subtitle">Soccer<br />team VR</h3>
-            </a>
-          </li>
-          <li class="creations__card">
-            <a href="#" class="creations__link">
-              <h3 class="creations__subtitle">The<br />grid</h3>
-            </a>
-          </li>
-          <li class="creations__card">
-            <a href="#" class="creations__link">
-              <h3 class="creations__subtitle">From up<br />above VR</h3>
-            </a>
-          </li>
-          <li class="creations__card">
-            <a href="#" class="creations__link">
-              <h3 class="creations__subtitle">Pocket<br />borealis</h3>
-            </a>
-          </li>
-          <li class="creations__card">
-            <a href="#" class="creations__link">
-              <h3 class="creations__subtitle">The<br />curiosity</h3>
-            </a>
-          </li>
-          <li class="creations__card">
-            <a href="#" class="creations__link">
-              <h3 class="creations__subtitle">Make it<br />fisheye</h3>
-            </a>
-          </li>
-        </ul>
-        <button type="button" class="creations__btn btn">see all</button>
+      <section class="creations layout">
+        <div class="creations__wrapper layout__content">
+          <h2 class="creations__title">Our creations</h2>
+          <ul class="creations__cards">
+            <li class="creations__card">
+              <a href="#" class="creations__link">
+                <h3 class="creations__subtitle">Deep<br />earth</h3>
+              </a>
+            </li>
+            <li class="creations__card">
+              <a href="#" class="creations__link">
+                <h3 class="creations__subtitle">Night<br />arcade</h3>
+              </a>
+            </li>
+            <li class="creations__card">
+              <a href="#" class="creations__link">
+                <h3 class="creations__subtitle">Soccer<br />team VR</h3>
+              </a>
+            </li>
+            <li class="creations__card">
+              <a href="#" class="creations__link">
+                <h3 class="creations__subtitle">The<br />grid</h3>
+              </a>
+            </li>
+            <li class="creations__card">
+              <a href="#" class="creations__link">
+                <h3 class="creations__subtitle">From up<br />above VR</h3>
+              </a>
+            </li>
+            <li class="creations__card">
+              <a href="#" class="creations__link">
+                <h3 class="creations__subtitle">Pocket<br />borealis</h3>
+              </a>
+            </li>
+            <li class="creations__card">
+              <a href="#" class="creations__link">
+                <h3 class="creations__subtitle">The<br />curiosity</h3>
+              </a>
+            </li>
+            <li class="creations__card">
+              <a href="#" class="creations__link">
+                <h3 class="creations__subtitle">Make it<br />fisheye</h3>
+              </a>
+            </li>
+          </ul>
+          <button type="button" class="creations__btn btn">see all</button>
+        </div>
       </section>
-      <footer class="footer layout__full-width layout">
+      <footer class="footer layout">
         <div class="footer__wrapper layout__content">
           <img class="footer__logo" src="images/logo.svg" alt="loopstudios" />
           <ul class="footer__links">
