room homepage - carousel (css only)

--- a/room-homepage/index.html
+++ b/room-homepage/index.html
@@ -13,6 +13,38 @@
     <title>Frontend Mentor | Room homepage</title>
   </head>
   <body>
-    <main></main>
+    <main>
+      <section>
+        <ul class="carousel" aria-label="Gallery">
+          <li>
+            <img
+              srcset="
+                images/mobile-image-hero-1.jpg  375w,
+                images/desktop-image-hero-1.jpg 840w
+              "
+              alt="white chairs and table with bonsai"
+            />
+          </li>
+          <li>
+            <img
+              srcset="
+                images/mobile-image-hero-2.jpg  375w,
+                images/desktop-image-hero-2.jpg 840w
+              "
+              alt="three different coloured chairs"
+            />
+          </li>
+          <li>
+            <img
+              srcset="
+                images/mobile-image-hero-3.jpg  375w,
+                images/desktop-image-hero-3.jpg 840w
+              "
+              alt="foldable black chair"
+            />
+          </li>
+        </ul>
+      </section>
+    </main>
   </body>
 </html>
